body margin for footer fixed on small websites

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
 
 @media (max-width: 992px) {
   body {
-    margin-bottom: 891px;
+    margin-bottom: 680px;
   }
 }
 .footer {
